# Master-Project-Deployer

./: .gitignore  README.md  advanced_editor.py  app.py  auto_job_applier.py  basic_editor.py  cold_email_generator.py  cold_emailer.py  deploy.py  env_check.py  master_project_deployer.py  mode_selector.py  pyproject.toml  requirements.txt  resume.txt  resume_notifier.py  setup_env.bat  smart_email_dispatcher.py  smart_recruiter_fetcher.py  smtp_test.py  test.txt
templates/: index.html  preview.html
